# ledger-link

./: .env.example  .gitignore  README.md  components.json  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.server.json  vitest.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-and-sage-bridge/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
DOCS/: 1 contabilidade-reconciliacao.jsx  2 doc-ocr-reconciliacao.jsx  Claude.docx  Tasks Excel version.md  Tasks Word version.md  Tasks.md
client/: index.html  postcss.config.js  tailwind.config.js  vite.config.ts
client/src/: globals.css  main.tsx  routeTree.gen.ts
client/src/components/: AppSidebar.tsx  TransactionsEmpty.tsx  TransactionsError.tsx  TransactionsFilters.tsx  TransactionsSkeleton.tsx  TransactionsTable.tsx
client/src/lib/: api.ts  utils.ts
scripts/: process_invoices.sh
src/: index.ts  server.ts
src/db/: client.ts  schema.ts
src/invoice_link/: __init__.py  cli.py  env.py  extract.py  llm_extract.py  models.py  ocr.py
src/sage-bridge/: bridge-client.ts  bridge-host.ts  pence.ts  types.ts
src/types/: domain.ts
tests/api/: transactions.test.ts
tests/sage-bridge/: bridge-client.test.ts  pence-conversion.test.ts
tests/server/: spa-fallback.test.ts
tests/utils/: format-amount.test.ts
(+5 files in other folders)
